博客评论层级显示，以及修改了bug(删除时解除级联)

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -80,4 +80,5 @@ logging:
   #日志存放位置
   file: log/blog.log
 
-comment.headPicture: /images/mian.jpg
+comment.headPicture: /images/head.png
+manager.headPicture: /images/manager.png
